--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "zrsbackup"
-version = "0.1.0"
-authors = ["root"]
+version = "0.0.0"
+authors = ["Ognyan Kulev <ognyan@ognyankulev.com>"]
 
 [dependencies.clap]
 version = "2"
